# statModel

./: .gitignore  CMakeLists.txt
CMake/: FindChaoWangCppUtil.cmake  FindChaoWangCppUtil.cmake.bak
src/statModel/: CMakeLists.txt  statModel.hpp  statModelCore.hpp
src/statModel/models/: CMakeLists.txt
src/statModel/models/reducedRankRegression/: CMakeLists.txt  reducedRankRegression.cpp  reducedRankRegression.hpp
src/statModel/statModelCore/: .directory  CMakeLists.txt  baseStatModel.cpp  baseStatModel.hpp  generalData.cpp  generalData.hpp  prediction.cpp  prediction.hpp
